# music_server

./: .gitignore  Cargo.toml
.cargo/: config.toml
client/: Cargo.toml  log
client/src/: app.rs  dbus.rs  event.rs  main.rs  player.rs
server/: Cargo.toml
server/src/: config.rs  db.rs  lastfm.rs  main.rs  source.rs  utils.rs
server/src/source/: spotify.rs  youtube.rs
server/src/utils/: spotify_downloader.rs
src/: config.rs  db.rs  lib.rs  main.rs  protocole.txt  request.rs  source.rs  source_types.rs
src/source/: spotify.rs  youtube.rs
