[package]
name = "music_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
google-youtube3 = "*"
serde = "^1.0"
erased-serde = "0.3"
serde_json = "^1.0"
async-trait = "0.1.68"
