[package]
name = "music_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
google-youtube3 = "*"
serde = "^1.0"
serde_json = "^1.0"
async-trait = "0.1.68"
futures = "0.3"
online = { version = "4.0.0", default-features = false, features = ["tokio-runtime"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
regex = "1.9.1"
confy = "0.5.1"
rspotify = "0.11.7"
rspotify-model = "0.11.7"
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
