[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
tokio = { version = "1.29.1", features = ["full"] }
tui = "0.19.0"
music_server = {path = "../"}
serde_json = "1.0.104"
libmpv = {git = "https://github.com/ParadoxSpiral/libmpv-rs.git", rev = "3e6c389"}
zbus = { version = "3.14.1", features = ["tokio"] }
serde = "1.0.179"
